<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#999999" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_white">

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="15dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg01"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTabLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/bg_left_02"
                android:gravity="center"
                android:text="@string/law"
                android:textColor="#A2A2A2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTabRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/bg_right_1"
                android:gravity="center"
                android:text="@string/Irregular"
                android:textColor="@color/color_white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tx_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|right"
            android:paddingLeft="15dip"
            android:paddingRight="15dp"
            android:text="@string/sure"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#999999" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/text_0111"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <com.zuoni.zuoni_common.dialog.picker.view.LoopView
                    android:id="@+id/loop_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>


            <TextView
                android:id="@+id/tx_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dip"
                android:textColor="#B3B3B3"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layoutRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/text_0222"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <com.zuoni.zuoni_common.dialog.picker.view.LoopView
                    android:id="@+id/loop_data2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dip"
            android:background="#A5A5A5"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dip"
            android:background="#A5A5A5"
            android:visibility="gone" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E2E2E2" />

</LinearLayout>